# chain-enclave-ra

./: Cargo.toml  build.sh  run-client.sh  run-enclave.sh  run-sp.sh
ra-client/: Cargo.toml
ra-client/src/: config.rs  lib.rs  verifier.rs
ra-common/: Cargo.toml
ra-common/src/: lib.rs  quote.rs  report.rs
ra-common/src/protocol/: enclave.rs
ra-common/src/quote/: quote_body.rs
ra-enclave/: Cargo.toml
ra-enclave/src/: certificate.rs  cmac.rs  config.rs  context.rs  key_pair.rs  lib.rs
ra-sp/: Cargo.toml
ra-sp/src/: client.rs  config.rs  context.rs  ias_client.rs  lib.rs  protocol.rs  server.rs  types.rs
sample-ra-client/: Cargo.toml
sample-ra-client/src/: main.rs
sample-ra-enclave/: Cargo.toml
sample-ra-enclave/data/vendor-keys/: private_key.pem
sample-ra-enclave/src/: main.rs
sample-ra-sp/: Cargo.toml
sample-ra-sp/src/: main.rs
