[package]
name = "ra-client"
version = "0.1.0"
authors = ["Devashish Dixit <devashishdxt@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.2"
der-parser = "3.0"
log = "0.4"
rustls = { version = "0.17", features = ["dangerous_configuration"] }
serde_json = "1.0"
sha2 = "0.8"
thiserror = "1.0"
webpki = "0.21"
x509-parser = "0.6"

ra-common = { path = "../ra-common" }
