[package]
name = "ra-enclave"
version = "0.1.0"
authors = ["Devashish Dixit <devashishdxt@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ring = "0.16"
sgx-isa = { version = "0.3", features = ["sgxstd"] }
sha2 = "0.8"
thiserror = "1.0"
