[package]
name = "ra-enclave"
version = "0.1.0"
authors = ["Devashish Dixit <devashishdxt@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.3"
bincode = "1.2"
chrono = "0.4"
cmac = "0.2"
crypto-mac = { version = "0.7", features = ["std"] }
log = "0.4"
rcgen = "0.8"
rustls = "0.17"
sgx-isa = { version = "0.3", features = ["sgxstd"] }
sha2 = "0.8"
thiserror = "1.0"

ra-common = { path = "../ra-common" }
ra-sp = { path = "../ra-sp", features = ["client"] }

[patch.crates-io]
ring = { git = "https://github.com/devashishdxt/ring.git", branch = "sgx-env" }
