[package]
name = "ra-sp"
version = "0.1.0"
authors = ["Devashish Dixit <devashishdxt@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aesm-client = "0.2"
base64 = "0.12"
bincode = "1.2"
hex = "0.4"
log = "0.4"
reqwest = { version = "0.10", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sgx-isa = "0.3"
thiserror = "1.0"
