[package]
name = "ra-sp"
version = "0.1.0"
authors = ["Devashish Dixit <devashishdxt@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aesm-client = { version = "0.2", optional = true }
base64 = { version = "0.12", optional = true }
bincode = { version = "1.2", optional = true }
hex = { version = "0.4", optional = true }
log = { version = "0.4", optional = true }
reqwest = { version = "0.10", default-features = false, features = ["blocking", "json", "rustls-tls"], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", optional = true }
sgx-isa = { version = "0.3", optional = true }
thiserror = { version = "1.0", optional = true }

[features]
default = []
client = ["bincode", "thiserror"]
server = ["aesm-client", "base64", "bincode", "hex", "log", "reqwest", "serde_json", "sgx-isa", "thiserror"]
