[package]
name = "sample-ra-enclave"
version = "0.1.0"
authors = ["Devashish Dixit <devashishdxt@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ra-enclave = { path = "../ra-enclave" }

[patch.crates-io]
ring = { git = "https://github.com/devashishdxt/ring.git", rev = "f3a342c936b2b98619a1d8315543dbace8db1aff" }
