[package]
name = "sample-ra-enclave"
version = "0.1.0"
authors = ["Devashish Dixit <devashishdxt@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ra-enclave = { path = "../ra-enclave" }
rustls = "0.17"

[patch.crates-io]
ring = { git = "https://github.com/devashishdxt/ring.git", rev = "c20af342cdbf774a2a35c22cf091ba777f2ef400" }
